src/objects/CH_ServiceDisruptionReport__c.object
<CustomObject>
    <description>Used to create Root Cause Analysis Report</description>
    <fields>
        <fullName>CH_ApprovalDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Author__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_DescriptionOfChanges__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description of changes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CH_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Disruption Reports</relationshipLabel>
        <relationshipName>Service_Disruption_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_RelatedSupportTicket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field on case</description>
        <label>Related Support Ticket</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Disruption Reports</relationshipLabel>
        <relationshipName>Service_Disruption_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ReviewedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_RootCauseAnalysis__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause Analysis</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CH_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Disruption Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR# 1-{0000000}</displayFormat>
        <label>Service Disruption Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Disruption Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>